--- a/src/Translates/lang_en.properties
+++ b/src/Translates/lang_en.properties
@@ -1,3 +1,4 @@
+languageLabel=Language:
 file=_File
 edit=_Edit
 search=_Search
@@ -17,3 +18,4 @@ addbutton = Add Employee
 updatebutton=Update Employee
 radioitem.english = English
 radioitem.german = German
+user=Email/Username
